--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,9 @@
     android:layout_height="match_parent"
     tools:context=".ui.activities.MainActivity"
 
+    android:id="@+id/navHost"
     android:name="androidx.navigation.fragment.NavHostFragment"
     app:navGraph="@navigation/nav_graph"
-    app:defaultNavHost="true" />
+    app:defaultNavHost="true">
+
+</androidx.fragment.app.FragmentContainerView>
