--- a/app/src/main/res/layout/fragment_sing_up.xml
+++ b/app/src/main/res/layout/fragment_sing_up.xml
@@ -8,7 +8,7 @@
     tools:context=".ui.fragments.SignUpFragment">
 
     <TextView
-        android:id="@+id/signupTxt"
+        android:id="@+id/signUpTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -30,7 +30,7 @@
         android:layout_marginEnd="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/signupTxt">
+        app:layout_constraintTop_toBottomOf="@id/signUpTxt">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/nameSignUpTxt"
@@ -104,7 +104,7 @@
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/loginButton"
+        android:id="@+id/signUpButton"
         android:layout_width="0dp"
         android:layout_height="60dp"
         android:layout_marginStart="16dp"
@@ -127,6 +127,6 @@
         android:text="@string/already_have_account_log_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
+        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
