--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,6 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="home_activity_bottom_nav_color">#F1EBF5</color>
+    <color name="main_activity_bottom_nav_color">#FFFFFF</color>
 </resources>
