--- a/app/src/main/res/navigation/nav_graph_main.xml
+++ b/app/src/main/res/navigation/nav_graph_main.xml
@@ -9,11 +9,7 @@
         android:id="@+id/logInFragment"
         android:name="pt.ipbeja.todoapp.ui.fragments.LogInFragment"
         android:label="fragment_log_in"
-        tools:layout="@layout/fragment_log_in" >
-        <action
-            android:id="@+id/action_logInFragment_to_singUpFragment"
-            app:destination="@id/singUpFragment" />
-    </fragment>
+        tools:layout="@layout/fragment_log_in" />
     <fragment
         android:id="@+id/singUpFragment"
         android:name="pt.ipbeja.todoapp.ui.fragments.SignUpFragment"
